<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">微卫士</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="url_update">http://192.168.56.1:8080/AndroidWeb/update.html</string>
    <string name="tv_splash_setnetwork">世界上最遥远的距离就是断网，检查设置</string>
    <string name="exithint">再按一次退出程序</string>
    <string name="home_hint">我是您的高仿手机卫士，365天，8760小时，525600分钟，时刻保护您的手机</string>
    <string name="home_title">功能列表</string>
    <string name="setting_hint">设置中心</string>
    <string name="pre_name">sp_mf</string>
    <string name="pre_isAutoUpdate">isAutoUpdate</string>
    <string name="pre_isAddress">isAddress</string>
    <string name="pre_isConfiged">configed</string>
    <string name="pre_isSetUp">isSetup</string>
    <string name="pre_boundNum">boundNum</string>
    <string name="pre_DlgBg">dlgBg</string>
    <string name="autoupdate_off">自动更新已关闭</string>
    <string name="autoupdate_on">自动更新已开启</string>
    <string name="autoupdate_title">设置是否自动更新</string>
    <string name="address_off">设置显示号码归属地已经关闭</string>
    <string name="address_on">设置显示号码归属地已经开启</string>
    <string name="address_title">设置显示号码归属地</string>
    <string name="et_home_passwd1">请输入密码</string>
    <string name="et_home_passwd2">请再次输入密码</string>
    <string name="findlost_title">手机防盗</string>
    <string name="setup_title">设置向导</string>
    <string name="btn_setup_pre">上一步</string>
    <string name="btn_setup_next">下一步</string>
    <string name="tv_lf_num">安全号码</string>
    <string name="tv_lf_configed">防盗保护是否开启</string>

    <string-array name="setup_titles">
        <item>1  欢迎使用手机防盗</item>
        <item>2  设置安全号码</item>
        <item>3 恭喜你，设置完成</item>
    </string-array>
    <string-array name="dlgBgs">
        <item>半透明</item>
        <item>活力橙</item>
        <item>卫士蓝</item>
        <item>金属灰</item>
        <item>苹果绿</item>
    </string-array>

    <string name="setup1_title">您的手机防盗卫士</string>
    <string name="setup_function1">sim变更报警       #*alarm*#</string>
    <string name="setup_function2">GPS追踪</string>
    <string name="setup_function3">远程数据销毁    #*wipedata*#</string>
    <string name="setup_function4">远程锁屏</string>
    <string name="setup_sim_off">sim卡没有绑定</string>
    <string name="setup_sim_on">sim卡已绑定</string>
    <string name="setup_sim_title">点击绑定sim卡</string>
    <string name="btn_lf_setup">点击重新设置向导</string>
    <string name="tv_lf_introducation">功能简介</string>
    <string name="hint_et_setup3_num">请输入手机号码</string>
    <string name="btn_setup3_selectContactor">选择联系人</string>
    <string name="autils_title">高级工具</string>
    <string name="sample_description">一键锁屏</string>
    <string name="admin_lable">设置管理员权限</string>
    <string name="title_au_queryNum">查询电话归属地</string>
    <string name="title_au_backupSms">短信备份</string>
    <string name="title_au_reductSms">短信还原</string>
    <string name="title_numberaddress_query">号码归属地查询</string>
    <string name="si1_selectDlgBg">设置归属地显示风格</string>
    <string name="callsafe_title">黑名单拦截</string>
    <string name="openBlackNum_off">黑名单拦截已关闭</string>
    <string name="openBlackNum_on">黑名单拦截已开启</string>
    <string name="openBlackNum_title">设置是否开启黑名单拦截</string>
    <string name="appmanager_title">软件管理</string>
    <string name="show_sys_off">不显示系统进程</string>
    <string name="show_sys_on">显示系统进程</string>
    <string name="show_sys_title">设置是否显示系统进程</string>
    <string name="auto_clean_on">开启锁屏清理进程</string>
    <string name="auto_clean_off">关闭锁屏清理进程</string>
    <string name="auto_clean_title">设置开启锁屏清理进程</string>

</resources>