<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/setup1_title"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            style="@style/setup_textView1"
            android:text="@string/setup_function1" />

        <TextView
            style="@style/setup_textView1"
            android:text="@string/setup_function3" />
    </LinearLayout>

</LinearLayout>